--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "league/omnipay": "^3.2",
+        "omnipay/paypal": "^3.0",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
